# Blaze

./: Cargo.toml
scripts/: setup.sh
src/: main.rs
