[package]
name = "Blaze"
version = "1.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.24"
regex = "1"
whois = "2.0"

[[bin]]
name = "blaze"
path = "src/main.rs"
